// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<H2 /> renders 1`] = `
"<h2 data-css-tc8z0v>
  <span>Hello</span>
</h2>"
`;

exports[`<H2 /> renders styles 1`] = `
"<h2 data-css-f865j5>
  <span>Hello</span>
</h2>"
`;
